<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_nano_degree_apps" />

        <Button
            android:id="@+id/btn_popular_movies"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/btn_stock_hawk"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/btn_make_your_app_material"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material" />

        <Button
            android:id="@+id/btn_go_ubiquitous"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/btn_capstone"
            style="@style/launcher_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone" />
    </LinearLayout>

</RelativeLayout>

